--- a/index.html
+++ b/index.html
@@ -15,9 +15,13 @@
     <section class="font-[Inter] box-border bg-gradient-to-t from-[#0E0E0E] to-[#D35910] scroll-smooth relative">
         <!-- nav bar -->
         <aside
-            class="ml-[-100%] fixed z-10 top-[7%]  px-4 w-full hidden lg:flex flex-col justify-between transition duration-300 md:w-4/12 lg:ml-0 lg:w-[11%] xl:w-[11%] 2xl:w-[11%] mr-[1.5%]">
+            class="items-center ml-[-100%] fixed z-10 top-[7%] px-4 w-full hidden lg:flex flex-col justify-between transition duration-300 md:w-4/12 lg:ml-0 lg:w-[11%] xl:w-[11%] 2xl:w-[11%] mr-[1.5%]">
             <div>
-                <ul class="tracking-wide mt-8 leading-5 text-sm font-normal">
+                <div>
+                    <img class="m-auto rotate-[90deg] border border-[#D35910] p-4 rounded-full " width="60"
+                        src="star/اسهم/Arrow 1left.svg" alt="">
+                </div>
+                <ul class="tracking-wide leading-5 text-sm font-normal">
                     <li class="hover:scale-[1.5] transition duration-700">
                         <img src="star/LOGO/dubai_city.svg" alt="">
                     </li>
@@ -37,6 +41,10 @@
                         <img src="star/LOGO/dubai_city.svg" alt="">
                     </li>
                 </ul>
+            </div>
+            <div>
+                <img class="m-auto -rotate-[90deg] border border-[#D35910] p-4 rounded-full " width="60"
+                    src="star/اسهم/Arrow 1left.svg" alt="">
             </div>
         </aside>
         <!-- nav bar/ -->
