--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section class="font-[Inter] box-border bg-gradient-to-t from-[#0E0E0E] to-[#D35910] scroll-smooth relative">
         <!-- nav bar -->
         <aside
-            class="items-center ml-[-100%] fixed z-10 top-[7%] px-4 w-full hidden lg:flex flex-col justify-between transition duration-300 md:w-4/12 lg:ml-0 lg:w-[11%] xl:w-[11%] 2xl:w-[11%] mr-[1.5%]">
+            class="items-center ml-[-100%] fixed z-10 mt-[2%] px-4 w-full hidden lg:flex flex-col justify-between transition duration-300 md:w-4/12 lg:ml-0 lg:w-[11%] xl:w-[11%] 2xl:w-[11%] mr-[1.5%]">
             <div>
                 <div>
                     <img class="m-auto rotate-[90deg] border border-[#D35910] p-4 rounded-full " width="60"
@@ -186,9 +186,21 @@
     </section>
     <!-- icons section/ -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.js"></script>
-    <script>
-
-    </script>
+    <!-- <script>
+        let img = document.querySelector(".img");
+        let container = document.querySelector(".container");
+        function phones(phone) {
+            img.src = phone;
+        }
+        function colors(color) {
+            container.style.background = color;
+        }
+    </script> -->
+    <!--
+        <img class="img" src="img/0.png" alt="">
+        //
+        <img onclick="phones(this.src); colors('#000')" src="img/0.png" alt="">
+    -->
 </body>
 
 </html>
