--- a/index.html
+++ b/index.html
@@ -15,36 +15,28 @@
     <section class="font-[Inter] box-border bg-gradient-to-t from-[#0E0E0E] to-[#D35910] scroll-smooth relative">
         <!-- nav bar -->
         <aside
-            class="items-center ml-[-100%] fixed z-10 mt-[2%] px-4 w-full hidden lg:flex flex-col justify-between transition duration-300 md:w-4/12 lg:ml-0 lg:w-[11%] xl:w-[11%] 2xl:w-[11%] mr-[1.5%]">
-            <div>
-                <div>
-                    <img class="m-auto rotate-[90deg] border border-[#D35910] p-4 rounded-full " width="60"
-                        src="star/اسهم/Arrow 1left.svg" alt="">
-                </div>
+            class="overflow-x-auto z-10 h-full absolute px-1 md:px-4 flex flex-col justify-between transition duration-300">
+            <div class="m-auto">
                 <ul class="tracking-wide leading-5 text-sm font-normal">
                     <li class="hover:scale-[1.5] transition duration-700">
-                        <img src="star/LOGO/dubai_city.svg" alt="">
+                        <img class="w-[30%] sm:w-full" src="star/LOGO/dubai_city.svg" alt="">
                     </li>
                     <li class="hover:scale-[1.5] transition duration-700">
-                        <img src="star/LOGO/dubai_city.svg" alt="">
+                        <img class="w-[30%] sm:w-full" src="star/LOGO/dubai_city.svg" alt="">
                     </li>
                     <li class="hover:scale-[1.5] transition duration-700">
-                        <img src="star/LOGO/dubai_city.svg" alt="">
+                        <img class="w-[30%] sm:w-full" src="star/LOGO/dubai_city.svg" alt="">
                     </li>
                     <li class="hover:scale-[1.5] transition duration-700">
-                        <img src="star/LOGO/dubai_city.svg" alt="">
+                        <img class="w-[30%] sm:w-full" src="star/LOGO/dubai_city.svg" alt="">
                     </li>
                     <li class="hover:scale-[1.5] transition duration-700">
-                        <img src="star/LOGO/dubai_city.svg" alt="">
+                        <img class="w-[30%] sm:w-full" src="star/LOGO/dubai_city.svg" alt="">
                     </li>
                     <li class="hover:scale-[1.5] transition duration-700">
-                        <img src="star/LOGO/dubai_city.svg" alt="">
+                        <img class="w-[30%] sm:w-full" src="star/LOGO/dubai_city.svg" alt="">
                     </li>
                 </ul>
-            </div>
-            <div>
-                <img class="m-auto -rotate-[90deg] border border-[#D35910] p-4 rounded-full " width="60"
-                    src="star/اسهم/Arrow 1left.svg" alt="">
             </div>
         </aside>
         <!-- nav bar/ -->
@@ -90,13 +82,11 @@
         </div>
         <!-- main section/ -->
         <!-- icons section -->
-        <div class="flex justify-center items-center">
-            <div>
-                <img class="rotate-[180deg] border border-[#D35910] p-4 rounded-full " width="60"
-                    src="star/اسهم/Arrow 1left.svg" alt="">
-            </div>
-            <div class="border-b border-[#D35910] flex justify-center">
-                <div class="group relative w-20">
+        <div>
+            <div class="w-full px-[2.5%]">
+                <div class="flex justify-center items-center max-w-[1200px] m-auto">=
+                    <div class="border-b border-[#D35910] flex justify-center overflow-hidden">
+                    <div class="group relative w-20">
                     <img class="relative group-hover:scale-[1] group-hover:-translate-y-3 z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
                         onclick="phones(this.src); colors('#000')" src="star/mini dirnks/mini orange.svg" alt="">
                     <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
@@ -104,8 +94,8 @@
                     <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                         src="star/mini dirnks/mini apple.svg" alt="">
                     <h2 class="group-hover:text-[#D35910] text-center text-white">orange</h2>
-                </div>
-                <div class="group relative w-20">
+                    </div>
+                    <div class="group relative w-20">
                     <img class="relative group-hover:scale-[1]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
                         onclick="phones(this.src); colors('#000')" src="star/mini dirnks/mini orange.svg" alt="">
                     <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
@@ -113,74 +103,72 @@
                     <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                         src="star/mini dirnks/mini apple.svg" alt="">
                     <h2 class="group-hover:text-[#D35910] text-center text-white">orange</h2>
+                    </div>
+                    <div class="group relative w-20">
+                        <img class="relative group-hover:scale-[1]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
+                            onclick="phones(this.src); colors('#000')" src="star/mini dirnks/mini orange.svg" alt="">
+                        <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
+                            src="star/mini dirnks/mini apple.svg" alt="">
+                        <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
+                            src="star/mini dirnks/mini apple.svg" alt="">
+                        <h2 class="group-hover:text-[#D35910] text-center text-white">orange</h2>
+                    </div>
+                    <div class="group relative w-20">
+                        <img class="relative group-hover:scale-[1]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
+                            onclick="phones(this.src); colors('#000')" src="star/mini dirnks/mini orange.svg" alt="">
+                        <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
+                            src="star/mini dirnks/mini apple.svg" alt="">
+                        <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
+                            src="star/mini dirnks/mini apple.svg" alt="">
+                        <h2 class="group-hover:text-[#D35910] text-center text-white">orange</h2>
+                    </div>
+                    <div class="group relative w-20">
+                        <img class="relative group-hover:scale-[1]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
+                            onclick="phones(this.src); colors('#000')" src="star/mini dirnks/mini orange.svg" alt="">
+                        <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
+                            src="star/mini dirnks/mini apple.svg" alt="">
+                        <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
+                            src="star/mini dirnks/mini apple.svg" alt="">
+                        <h2 class="group-hover:text-[#D35910] text-center text-white">orange</h2>
+                    </div>
+                    <div class="group relative w-20">
+                        <img class="relative group-hover:scale-[1]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
+                            onclick="phones(this.src); colors('#000')" src="star/mini dirnks/mini orange.svg" alt="">
+                        <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
+                            src="star/mini dirnks/mini apple.svg" alt="">
+                        <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
+                            src="star/mini dirnks/mini apple.svg" alt="">
+                        <h2 class="group-hover:text-[#D35910] text-center text-white">orange</h2>
+                    </div>
+                    <div class="group relative w-20">
+                        <img class="relative group-hover:scale-[1]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
+                            onclick="phones(this.src); colors('#000')" src="star/mini dirnks/mini orange.svg" alt="">
+                        <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
+                            src="star/mini dirnks/mini apple.svg" alt="">
+                        <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
+                            src="star/mini dirnks/mini apple.svg" alt="">
+                        <h2 class="group-hover:text-[#D35910] text-center text-white">orange</h2>
+                    </div>
+                    <div class="group relative w-20">
+                        <img class="relative group-hover:scale-[1]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
+                            onclick="phones(this.src); colors('#000')" src="star/mini dirnks/mini orange.svg" alt="">
+                        <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
+                            src="star/mini dirnks/mini apple.svg" alt="">
+                        <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
+                            src="star/mini dirnks/mini apple.svg" alt="">
+                        <h2 class="group-hover:text-[#D35910] text-center text-white">orange</h2>
+                    </div>
+                    <div class="group relative w-20">
+                        <img class="relative group-hover:scale-[1]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
+                            onclick="phones(this.src); colors('#000')" src="star/mini dirnks/mini orange.svg" alt="">
+                        <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
+                            src="star/mini dirnks/mini apple.svg" alt="">
+                        <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
+                            src="star/mini dirnks/mini apple.svg" alt="">
+                        <h2 class="group-hover:text-[#D35910] text-center text-white">orange</h2>
+                    </div>
+                    </div>
                 </div>
-                <div class="group relative w-20">
-                    <img class="relative group-hover:scale-[1]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                        onclick="phones(this.src); colors('#000')" src="star/mini dirnks/mini orange.svg" alt="">
-                    <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
-                        src="star/mini dirnks/mini apple.svg" alt="">
-                    <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
-                        src="star/mini dirnks/mini apple.svg" alt="">
-                    <h2 class="group-hover:text-[#D35910] text-center text-white">orange</h2>
-                </div>
-                <div class="group relative w-20">
-                    <img class="relative group-hover:scale-[1]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                        onclick="phones(this.src); colors('#000')" src="star/mini dirnks/mini orange.svg" alt="">
-                    <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
-                        src="star/mini dirnks/mini apple.svg" alt="">
-                    <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
-                        src="star/mini dirnks/mini apple.svg" alt="">
-                    <h2 class="group-hover:text-[#D35910] text-center text-white">orange</h2>
-                </div>
-                <div class="group relative w-20">
-                    <img class="relative group-hover:scale-[1]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                        onclick="phones(this.src); colors('#000')" src="star/mini dirnks/mini orange.svg" alt="">
-                    <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
-                        src="star/mini dirnks/mini apple.svg" alt="">
-                    <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
-                        src="star/mini dirnks/mini apple.svg" alt="">
-                    <h2 class="group-hover:text-[#D35910] text-center text-white">orange</h2>
-                </div>
-                <div class="group relative w-20">
-                    <img class="relative group-hover:scale-[1]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                        onclick="phones(this.src); colors('#000')" src="star/mini dirnks/mini orange.svg" alt="">
-                    <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
-                        src="star/mini dirnks/mini apple.svg" alt="">
-                    <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
-                        src="star/mini dirnks/mini apple.svg" alt="">
-                    <h2 class="group-hover:text-[#D35910] text-center text-white">orange</h2>
-                </div>
-                <div class="group relative w-20">
-                    <img class="relative group-hover:scale-[1]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                        onclick="phones(this.src); colors('#000')" src="star/mini dirnks/mini orange.svg" alt="">
-                    <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
-                        src="star/mini dirnks/mini apple.svg" alt="">
-                    <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
-                        src="star/mini dirnks/mini apple.svg" alt="">
-                    <h2 class="group-hover:text-[#D35910] text-center text-white">orange</h2>
-                </div>
-                <div class="group relative w-20">
-                    <img class="relative group-hover:scale-[1]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                        onclick="phones(this.src); colors('#000')" src="star/mini dirnks/mini orange.svg" alt="">
-                    <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
-                        src="star/mini dirnks/mini apple.svg" alt="">
-                    <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
-                        src="star/mini dirnks/mini apple.svg" alt="">
-                    <h2 class="group-hover:text-[#D35910] text-center text-white">orange</h2>
-                </div>
-                <div class="group relative w-20">
-                    <img class="relative group-hover:scale-[1]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                        onclick="phones(this.src); colors('#000')" src="star/mini dirnks/mini orange.svg" alt="">
-                    <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
-                        src="star/mini dirnks/mini apple.svg" alt="">
-                    <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
-                        src="star/mini dirnks/mini apple.svg" alt="">
-                    <h2 class="group-hover:text-[#D35910] text-center text-white">orange</h2>
-                </div>
-            </div>
-            <div>
-                <img class="border border-[#D35910] p-4 rounded-full " width="60" src="star/اسهم/Arrow 1left.svg"
-                    alt="">
             </div>
         </div>
     </section>
