--- a/index.html
+++ b/index.html
@@ -16,25 +16,42 @@
         <!-- nav bar -->
         <aside
             class="overflow-x-auto z-10 h-full absolute px-1 md:px-4 flex flex-col justify-between transition duration-300">
-            <div class="m-auto">
+            <div class="m-auto overflow-x-hidden h-[40%] lg:h-[70%]">
                 <ul class="tracking-wide leading-5 text-sm font-normal">
                     <li class="hover:scale-[1.5] transition duration-700">
-                        <img class="w-[30%] sm:w-full" src="star/LOGO/dubai_city.svg" alt="">
+                        <img class="w-[30%] sm:w-[50%] lg:w-full" src="star/LOGO/dubai_city.svg" alt="">
                     </li>
                     <li class="hover:scale-[1.5] transition duration-700">
-                        <img class="w-[30%] sm:w-full" src="star/LOGO/dubai_city.svg" alt="">
+                        <img class="w-[30%] sm:w-[50%] lg:w-full" src="star/LOGO/dubai_city.svg" alt="">
                     </li>
                     <li class="hover:scale-[1.5] transition duration-700">
-                        <img class="w-[30%] sm:w-full" src="star/LOGO/dubai_city.svg" alt="">
+                        <img class="w-[30%] sm:w-[50%] lg:w-full" src="star/LOGO/dubai_city.svg" alt="">
                     </li>
                     <li class="hover:scale-[1.5] transition duration-700">
-                        <img class="w-[30%] sm:w-full" src="star/LOGO/dubai_city.svg" alt="">
+                        <img class="w-[30%] sm:w-[50%] lg:w-full" src="star/LOGO/dubai_city.svg" alt="">
                     </li>
                     <li class="hover:scale-[1.5] transition duration-700">
-                        <img class="w-[30%] sm:w-full" src="star/LOGO/dubai_city.svg" alt="">
+                        <img class="w-[30%] sm:w-[50%] lg:w-full" src="star/LOGO/dubai_city.svg" alt="">
                     </li>
                     <li class="hover:scale-[1.5] transition duration-700">
-                        <img class="w-[30%] sm:w-full" src="star/LOGO/dubai_city.svg" alt="">
+                        <img class="w-[30%] sm:w-[50%] lg:w-full" src="star/LOGO/dubai_city.svg" alt="">
+                    </li>                    <li class="hover:scale-[1.5] transition duration-700">
+                        <img class="w-[30%] sm:w-[50%] lg:w-full" src="star/LOGO/dubai_city.svg" alt="">
+                    </li>
+                    <li class="hover:scale-[1.5] transition duration-700">
+                        <img class="w-[30%] sm:w-[50%] lg:w-full" src="star/LOGO/dubai_city.svg" alt="">
+                    </li>
+                    <li class="hover:scale-[1.5] transition duration-700">
+                        <img class="w-[30%] sm:w-[50%] lg:w-full" src="star/LOGO/dubai_city.svg" alt="">
+                    </li>
+                    <li class="hover:scale-[1.5] transition duration-700">
+                        <img class="w-[30%] sm:w-[50%] lg:w-full" src="star/LOGO/dubai_city.svg" alt="">
+                    </li>
+                    <li class="hover:scale-[1.5] transition duration-700">
+                        <img class="w-[30%] sm:w-[50%] lg:w-full" src="star/LOGO/dubai_city.svg" alt="">
+                    </li>
+                    <li class="hover:scale-[1.5] transition duration-700">
+                        <img class="w-[30%] sm:w-[50%] lg:w-full" src="star/LOGO/dubai_city.svg" alt="">
                     </li>
                 </ul>
             </div>
