edit text orange

--- a/index.html
+++ b/index.html
@@ -12,11 +12,20 @@
 </head>
 
 <body>
+    <style>
+        .sb {
+            -ms-overflow-style: none;  /* Internet Explorer 10+ */
+            scrollbar-width: none;  /* Firefox */
+        }
+        .sb::-webkit-scrollbar { 
+            display: none;  /* Safari and Chrome */
+        }
+    </style>
     <section class="font-[Inter] box-border bg-gradient-to-t from-[#0E0E0E] to-[#D35910] scroll-smooth relative">
         <!-- nav bar -->
         <aside
             class="overflow-x-auto z-10 h-full absolute px-1 md:px-4 flex flex-col justify-between transition duration-300">
-            <div class="m-auto overflow-x-hidden h-[40%] lg:h-[70%]">
+            <div class="m-auto overflow-x-hidden h-[40%] lg:h-[70%] sb">
                 <ul class="tracking-wide leading-5 text-sm font-normal">
                     <li class="hover:scale-[1.5] transition duration-700">
                         <img class="w-[30%] sm:w-[50%] lg:w-full" src="star/LOGO/dubai_city.svg" alt="">
@@ -110,7 +119,7 @@
                         src="star/mini dirnks/mini apple.svg" alt="">
                     <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                         src="star/mini dirnks/mini apple.svg" alt="">
-                    <h2 class="group-hover:text-[#D35910] text-center text-white">orange</h2>
+                    <h2 class="group-hover:text-[#D35910] text-center text-white text-[6px] lg:text-sm">orange</h2>
                     </div>
                     <div class="group relative w-20">
                     <img class="relative group-hover:scale-[1]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
@@ -119,7 +128,7 @@
                         src="star/mini dirnks/mini apple.svg" alt="">
                     <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                         src="star/mini dirnks/mini apple.svg" alt="">
-                    <h2 class="group-hover:text-[#D35910] text-center text-white">orange</h2>
+                    <h2 class="group-hover:text-[#D35910] text-center text-white text-[6px] lg:text-sm">orange</h2>
                     </div>
                     <div class="group relative w-20">
                         <img class="relative group-hover:scale-[1]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
@@ -128,7 +137,7 @@
                             src="star/mini dirnks/mini apple.svg" alt="">
                         <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                             src="star/mini dirnks/mini apple.svg" alt="">
-                        <h2 class="group-hover:text-[#D35910] text-center text-white">orange</h2>
+                        <h2 class="group-hover:text-[#D35910] text-center text-white text-[6px] lg:text-sm">orange</h2>
                     </div>
                     <div class="group relative w-20">
                         <img class="relative group-hover:scale-[1]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
@@ -137,7 +146,7 @@
                             src="star/mini dirnks/mini apple.svg" alt="">
                         <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                             src="star/mini dirnks/mini apple.svg" alt="">
-                        <h2 class="group-hover:text-[#D35910] text-center text-white">orange</h2>
+                        <h2 class="group-hover:text-[#D35910] text-center text-white text-[6px] lg:text-sm">orange</h2>
                     </div>
                     <div class="group relative w-20">
                         <img class="relative group-hover:scale-[1]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
@@ -146,7 +155,7 @@
                             src="star/mini dirnks/mini apple.svg" alt="">
                         <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                             src="star/mini dirnks/mini apple.svg" alt="">
-                        <h2 class="group-hover:text-[#D35910] text-center text-white">orange</h2>
+                        <h2 class="group-hover:text-[#D35910] text-center text-white text-[6px] lg:text-sm">orange</h2>
                     </div>
                     <div class="group relative w-20">
                         <img class="relative group-hover:scale-[1]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
@@ -155,7 +164,7 @@
                             src="star/mini dirnks/mini apple.svg" alt="">
                         <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                             src="star/mini dirnks/mini apple.svg" alt="">
-                        <h2 class="group-hover:text-[#D35910] text-center text-white">orange</h2>
+                        <h2 class="group-hover:text-[#D35910] text-center text-white text-[6px] lg:text-sm">orange</h2>
                     </div>
                     <div class="group relative w-20">
                         <img class="relative group-hover:scale-[1]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
@@ -164,7 +173,7 @@
                             src="star/mini dirnks/mini apple.svg" alt="">
                         <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                             src="star/mini dirnks/mini apple.svg" alt="">
-                        <h2 class="group-hover:text-[#D35910] text-center text-white">orange</h2>
+                        <h2 class="group-hover:text-[#D35910] text-center text-white text-[6px] lg:text-sm">orange</h2>
                     </div>
                     <div class="group relative w-20">
                         <img class="relative group-hover:scale-[1]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
@@ -173,7 +182,7 @@
                             src="star/mini dirnks/mini apple.svg" alt="">
                         <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                             src="star/mini dirnks/mini apple.svg" alt="">
-                        <h2 class="group-hover:text-[#D35910] text-center text-white">orange</h2>
+                        <h2 class="group-hover:text-[#D35910] text-center text-white text-[6px] lg:text-sm">orange</h2>
                     </div>
                     <div class="group relative w-20">
                         <img class="relative group-hover:scale-[1]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
@@ -182,7 +191,7 @@
                             src="star/mini dirnks/mini apple.svg" alt="">
                         <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                             src="star/mini dirnks/mini apple.svg" alt="">
-                        <h2 class="group-hover:text-[#D35910] text-center text-white">orange</h2>
+                        <h2 class="group-hover:text-[#D35910] text-center text-white text-[6px] lg:text-sm">orange</h2>
                     </div>
                     </div>
                 </div>
