--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             display: none;  /* Safari and Chrome */
         }
     </style>
-    <section class="font-[Inter] box-border bg-gradient-to-t from-[#0E0E0E] to-[#D35910] scroll-smooth relative">
+    <section class="font-[Inter] box-border scroll-smooth relative bodyColor bg-gradient-to-t from-[#0E0E0E] to-[#D35910]">
         <!-- nav bar -->
         <aside
             class="overflow-x-auto z-10 h-full absolute px-1 md:px-4 flex flex-col justify-between transition duration-300">
@@ -77,22 +77,22 @@
                     src="star/Cartoons/Cartoon peach right left.svg" alt="">
             </div>
             <div class="image w-[40%] group flex justify-center">
-                <img class="img w-[60%] z-10 transition duration-[300ms] pointer origin-bottom-right group-hover:rotate-[6.79deg] shadow-[0px_4px_0px_0px_rgba(0, 0, 0, 0)] rounded-[59px] ease-out group-hover:shadow-none"
-                    src="star/منتجات BOOM BOOM/PINEAPPLE F 5 from figma.svg" alt="">
-                <img class="img absolute w-0 group-hover:w-[20%] z-[7] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-[20.87deg] translate-y-[30%] -translate-x-[32%]"
+                <img class="drinkImage w-[15%] z-10 transition duration-[300ms] pointer origin-bottom-right group-hover:rotate-[6.79deg] shadow-[0px_4px_0px_0px_rgba(0, 0, 0, 0)] rounded-[59px] ease-out group-hover:shadow-none"
+                    src="STAR/منتجات BOOM BOOM/نكهة برتقال 5.png" alt="">
+                <img class="liquidImage absolute w-0 group-hover:w-[20%] z-[7] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-[20.87deg] translate-y-[30%] -translate-x-[32%]"
                     src="star\orange/orange-juice-splash.svg" alt="">
-                <img class="img absolute z-[8] w-0 group-hover:w-[15%] translate-y-[37%] -translate-x-[20%] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-[9.45deg]"
+                <img class="fruitImage absolute z-[8] w-0 group-hover:w-[15%] translate-y-[37%] -translate-x-[20%] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-[9.45deg]"
                     src="star\orange\orange-poster.svg" alt="">
-                <img class="img absolute w-0 group-hover:w-[15%] z-[9] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-6 translate-y-[87%] -translate-x-[24%]"
+                <img class="sliceImage absolute w-0 group-hover:w-[15%] z-[9] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-6 translate-y-[87%] -translate-x-[24%]"
                     src="star\orange/orange-ingredients-10.svg" alt="">
-                <img class="img absolute w-[9%] z-[9] transition duration-[0.5s] pointer origin-top-left group-hover:-rotate-6 shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-0 translate-x-[130%]"
-                    src="STAR/منتجات BOOM BOOM/PINEAPPLE F 6.svg" alt="">
-                <img class="img absolute w-[11%] z-[9] transition duration-[0.5s] pointer origin-top-right group-hover:rotate-6 shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-[23%] -translate-x-[165%]"
-                    src="STAR/منتجات BOOM BOOM/PINEAPPLE F 7.svg" alt="">
+                <img class="drinkImage absolute w-[2%] blur-[1px] rotate-[30deg]  z-[9] transition duration-[0.5s] pointer origin-top-left group-hover:rotate-6 shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-[50%] translate-x-[650%]"
+                    src="STAR/منتجات BOOM BOOM/نكهة برتقال 5.png" alt="">
+                <img class="drinkImage absolute w-[1%] blur-[1px] -rotate-[30deg] z-[9] transition duration-[0.5s] pointer origin-top-right group-hover:rotate-6 shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-[110%] -translate-x-[900%]"
+                    src="STAR/منتجات BOOM BOOM/نكهة برتقال 5.png" alt="">
             </div>
             <div dir="ltr" class="text text-white w-[20%] m-auto">
                 <img class="" src="star/LOGO/frizbi logo with bg.svg" alt="">
-                <h2 class="text-base uppercase">apple</h2>
+                <h2 id="fruit-text" class="text-base uppercase">Orange</h2>
                 <p class="text-[6px] lg:text-sm lg:mb-3">
                     You might be looking at this Slider Revolution template and wondering how the heck you’re going to
                     repurpose it for your
@@ -110,88 +110,26 @@
         <!-- icons section -->
         <div>
             <div class="w-full px-[2.5%]">
-                <div class="flex justify-center items-center max-w-[1200px] m-auto">=
-                    <div class="border-b border-[#D35910] flex justify-center overflow-hidden">
-                    <div class="group relative w-20">
-                    <img class="relative group-hover:scale-[1] group-hover:-translate-y-3 z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                        onclick="phones(this.src); colors('#000')" src="star/mini dirnks/mini orange.svg" alt="">
-                    <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
-                        src="star/mini dirnks/mini apple.svg" alt="">
-                    <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
-                        src="star/mini dirnks/mini apple.svg" alt="">
-                    <h2 class="group-hover:text-[#D35910] text-center text-white text-[6px] lg:text-sm">orange</h2>
+                <div class="flex justify-center items-center max-w-[1200px] m-auto">
+                    <div class="border-b border-[#D35910] flex justify-center">
+                    <div class="group relative w-20" >
+                    <img class="relative group-hover:scale-[1] w-[18px] h-[80] group-hover:-translate-y-3 z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
+                        onclick="changeText('Orange'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#D35910]')"
+                        src="STAR/منتجات BOOM BOOM/نكهة برتقال 5.png" alt="">
+                    <img class="absolute group-hover:scale-[1] w-[18px] h-[80] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
+                        src="STAR/منتجات BOOM BOOM/نكهة برتقال 5.png" alt="">
+                    <img class="absolute group-hover:scale-[1] w-[18px] h-[80] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
+                        src="STAR/منتجات BOOM BOOM/نكهة برتقال 5.png" alt="">
+                    <h2 class="group-hover:text-[#D35910] text-white text-[6px] lg:text-sm">orange</h2>
                     </div>
                     <div class="group relative w-20">
-                    <img class="relative group-hover:scale-[1]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                        onclick="phones(this.src); colors('#000')" src="star/mini dirnks/mini orange.svg" alt="">
-                    <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
-                        src="star/mini dirnks/mini apple.svg" alt="">
-                    <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
-                        src="star/mini dirnks/mini apple.svg" alt="">
-                    <h2 class="group-hover:text-[#D35910] text-center text-white text-[6px] lg:text-sm">orange</h2>
-                    </div>
-                    <div class="group relative w-20">
-                        <img class="relative group-hover:scale-[1]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                            onclick="phones(this.src); colors('#000')" src="star/mini dirnks/mini orange.svg" alt="">
-                        <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
-                            src="star/mini dirnks/mini apple.svg" alt="">
-                        <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
-                            src="star/mini dirnks/mini apple.svg" alt="">
-                        <h2 class="group-hover:text-[#D35910] text-center text-white text-[6px] lg:text-sm">orange</h2>
-                    </div>
-                    <div class="group relative w-20">
-                        <img class="relative group-hover:scale-[1]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                            onclick="phones(this.src); colors('#000')" src="star/mini dirnks/mini orange.svg" alt="">
-                        <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
-                            src="star/mini dirnks/mini apple.svg" alt="">
-                        <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
-                            src="star/mini dirnks/mini apple.svg" alt="">
-                        <h2 class="group-hover:text-[#D35910] text-center text-white text-[6px] lg:text-sm">orange</h2>
-                    </div>
-                    <div class="group relative w-20">
-                        <img class="relative group-hover:scale-[1]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                            onclick="phones(this.src); colors('#000')" src="star/mini dirnks/mini orange.svg" alt="">
-                        <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
-                            src="star/mini dirnks/mini apple.svg" alt="">
-                        <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
-                            src="star/mini dirnks/mini apple.svg" alt="">
-                        <h2 class="group-hover:text-[#D35910] text-center text-white text-[6px] lg:text-sm">orange</h2>
-                    </div>
-                    <div class="group relative w-20">
-                        <img class="relative group-hover:scale-[1]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                            onclick="phones(this.src); colors('#000')" src="star/mini dirnks/mini orange.svg" alt="">
-                        <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
-                            src="star/mini dirnks/mini apple.svg" alt="">
-                        <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
-                            src="star/mini dirnks/mini apple.svg" alt="">
-                        <h2 class="group-hover:text-[#D35910] text-center text-white text-[6px] lg:text-sm">orange</h2>
-                    </div>
-                    <div class="group relative w-20">
-                        <img class="relative group-hover:scale-[1]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                            onclick="phones(this.src); colors('#000')" src="star/mini dirnks/mini orange.svg" alt="">
-                        <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
-                            src="star/mini dirnks/mini apple.svg" alt="">
-                        <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
-                            src="star/mini dirnks/mini apple.svg" alt="">
-                        <h2 class="group-hover:text-[#D35910] text-center text-white text-[6px] lg:text-sm">orange</h2>
-                    </div>
-                    <div class="group relative w-20">
-                        <img class="relative group-hover:scale-[1]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                            onclick="phones(this.src); colors('#000')" src="star/mini dirnks/mini orange.svg" alt="">
-                        <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
-                            src="star/mini dirnks/mini apple.svg" alt="">
-                        <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
-                            src="star/mini dirnks/mini apple.svg" alt="">
-                        <h2 class="group-hover:text-[#D35910] text-center text-white text-[6px] lg:text-sm">orange</h2>
-                    </div>
-                    <div class="group relative w-20">
-                        <img class="relative group-hover:scale-[1]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                            onclick="phones(this.src); colors('#000')" src="star/mini dirnks/mini orange.svg" alt="">
-                        <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
-                            src="star/mini dirnks/mini apple.svg" alt="">
-                        <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
-                            src="star/mini dirnks/mini apple.svg" alt="">
-                        <h2 class="group-hover:text-[#D35910] text-center text-white text-[6px] lg:text-sm">orange</h2>
+                    <img class="relative group-hover:scale-[1] w-[18px] h-[80px]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
+                        onclick="changeText('Apple'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#94D12B]')" src="STAR/منتجات BOOM BOOM/تفاح 8.png" alt="">
+                    <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
+                        src="STAR/منتجات BOOM BOOM/تفاح 8.png" alt="">
+                    <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
+                        src="STAR/منتجات BOOM BOOM/تفاح 8.png" alt="">
+                    <h2 class="group-hover:text-[#D35910] text-white text-[6px] lg:text-sm">orange</h2>
                     </div>
                     </div>
                 </div>
@@ -200,21 +138,50 @@
     </section>
     <!-- icons section/ -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.js"></script>
-    <!-- <script>
-        let img = document.querySelector(".img");
-        let container = document.querySelector(".container");
-        function phones(phone) {
-            img.src = phone;
+     <script>
+        let fruitImage = document.querySelector(".fruitImage");
+        let sliceImage = document.querySelector(".sliceImage");
+        let liquidImage = document.querySelector(".liquidImage");
+        function drinks(drink) {
+            let drinkImages = document.querySelectorAll(".drinkImage");
+            drinkImages.forEach(function(img) {
+                img.src = drink;
+            });
+        }
+        function boxs(box) {
+            let boxImages = document.querySelectorAll(".boxImage");
+            boxImages.forEach(function(img) {
+                img.src = box;
+            });
+        }
+        function fruits(fruit) {
+            fruitImage.src = fruit;
+        }
+        function slices(slice) {
+            sliceImage.src = slice;
+        }
+        function liquids(liquid) {
+            liquidImage.src = liquid;
         }
         function colors(color) {
-            container.style.background = color;
+            let bodyColor = document.querySelector(".bodyColor");
+            // Remove all previous background gradient classes
+            bodyColor.className = bodyColor.className.replace(/bg-gradient-to-[^\s]+/g, '');
+            bodyColor.className = bodyColor.className.replace(/to-[^\s]+/g, '');
+            bodyColor.className = bodyColor.className.replace(/from-[^\s]+/g, '');
+            // Add the new class
+            bodyColor.classList.add(...color.split(' '));
         }
-    </script> -->
+
+        function changeText(newText) {
+            let fruitText = document.getElementById("fruit-text");
+            fruitText.innerText = newText;
+        }
+    </script>
     <!--
         <img class="img" src="img/0.png" alt="">
         //
         <img onclick="phones(this.src); colors('#000')" src="img/0.png" alt="">
     -->
 </body>
-
 </html>
