--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     src="STAR/منتجات BOOM BOOM/نكهة برتقال 5.png" alt="">
             </div>
             <div dir="ltr" class="text text-white w-[20%] m-auto">
-                <img class="" src="star/LOGO/frizbi logo with bg.svg" alt="">
+                <img class="logoImage" src="star/LOGO/frizbi logo with bg.svg" alt="">
                 <h2 id="fruit-text" class="text-base uppercase">Orange</h2>
                 <p class="text-[6px] lg:text-sm lg:mb-3">
                     You might be looking at this Slider Revolution template and wondering how the heck you’re going to
@@ -114,7 +114,7 @@
                     <div class="border-b border-[#D35910] flex justify-center">
                     <div class="group relative w-20" >
                     <img class="relative group-hover:scale-[1] w-[18px] h-[80] group-hover:-translate-y-3 z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                        onclick="changeText('Orange'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#D35910]')"
+                        onclick="changeText('Orange'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg'); logos('star/LOGO/frizbi logo with bg.svg'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#D35910]')"
                         src="STAR/منتجات BOOM BOOM/نكهة برتقال 5.png" alt="">
                     <img class="absolute group-hover:scale-[1] w-[18px] h-[80] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                         src="STAR/منتجات BOOM BOOM/نكهة برتقال 5.png" alt="">
@@ -124,7 +124,7 @@
                     </div>
                     <div class="group relative w-20">
                     <img class="relative group-hover:scale-[1] w-[18px] h-[80px]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                        onclick="changeText('Apple'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#94D12B]')" src="STAR/منتجات BOOM BOOM/تفاح 8.png" alt="">
+                        onclick="changeText('Apple'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg'); logos('star/LOGO/frizbi logo with bg.svg'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#94D12B]')" src="STAR/منتجات BOOM BOOM/تفاح 8.png" alt="">
                     <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                         src="STAR/منتجات BOOM BOOM/تفاح 8.png" alt="">
                     <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
@@ -142,6 +142,7 @@
         let fruitImage = document.querySelector(".fruitImage");
         let sliceImage = document.querySelector(".sliceImage");
         let liquidImage = document.querySelector(".liquidImage");
+        let logoImage = document.querySelector(".logoImage");
         function drinks(drink) {
             let drinkImages = document.querySelectorAll(".drinkImage");
             drinkImages.forEach(function(img) {
@@ -162,6 +163,9 @@
         }
         function liquids(liquid) {
             liquidImage.src = liquid;
+        }
+        function logos(logo) {
+            logoImage.src = logo;
         }
         function colors(color) {
             let bodyColor = document.querySelector(".bodyColor");
