--- a/index.html
+++ b/index.html
@@ -113,23 +113,23 @@
                 <div class="flex justify-center items-center max-w-[1200px] m-auto">
                     <div class="border-b border-[#D35910] flex justify-center">
                     <div class="group relative w-20" >
-                    <img class="relative group-hover:scale-[1] w-[18px] h-[80] group-hover:-translate-y-3 z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
+                    <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:-translate-y-3 z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
                         onclick="changeText('Orange'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg'); logos('star/LOGO/frizbi logo with bg.svg'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#D35910]')"
                         src="STAR/منتجات BOOM BOOM/نكهة برتقال 5.png" alt="">
-                    <img class="absolute group-hover:scale-[1] w-[18px] h-[80] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
+                    <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                         src="STAR/منتجات BOOM BOOM/نكهة برتقال 5.png" alt="">
-                    <img class="absolute group-hover:scale-[1] w-[18px] h-[80] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
+                    <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                         src="STAR/منتجات BOOM BOOM/نكهة برتقال 5.png" alt="">
-                    <h2 class="group-hover:text-[#D35910] text-white text-[6px] lg:text-sm">orange</h2>
+                    <h2 class="group-hover:text-[#D35910] text-white text-[6px] lg:text-sm">Orange</h2>
                     </div>
                     <div class="group relative w-20">
-                    <img class="relative group-hover:scale-[1] w-[18px] h-[80px]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
+                    <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
                         onclick="changeText('Apple'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg'); logos('star/LOGO/frizbi logo with bg.svg'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#94D12B]')" src="STAR/منتجات BOOM BOOM/تفاح 8.png" alt="">
-                    <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
+                    <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                         src="STAR/منتجات BOOM BOOM/تفاح 8.png" alt="">
-                    <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
+                    <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                         src="STAR/منتجات BOOM BOOM/تفاح 8.png" alt="">
-                    <h2 class="group-hover:text-[#D35910] text-white text-[6px] lg:text-sm">orange</h2>
+                    <h2 class="group-hover:text-[#D35910] text-white text-[6px] lg:text-sm">Apple</h2>
                     </div>
                     </div>
                 </div>
