--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     be done within minutes.
                 </p>
                 <a class="text-white text-[6px] lg:text-sm py-2 px-3 rounded-[20px] border border-[#D35910] hover:bg-[#D35910]"
-                    href="#">
+                    href="https://starmesrubat.com/shop/">
                     All products
                 </a>
             </div>
